welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: not found: value int
    int u = nums(i)
    ^noTriples:5: error: not found: value u
    if (nums(i+1)==u && nums(i+2)==u){
                   ^noTriples:5: error: not found: value u
    if (nums(i+1)==u && nums(i+2)==u){
                                   ^